# kv-store

./: Cargo.toml
src/: lib.rs  main.rs
src/auth/: auth_manager.rs  mod.rs  permission.rs  user.rs
src/auth/test/: auth_manager_tests.rs  mod.rs
src/commands/: command_names.rs  commands.rs  mod.rs  parser.rs  validator.rs  validator_tests.rs
src/config/: config.rs  mod.rs  persistence_config.rs
src/data/: auth_command_tests.rs  auth_manager.rs  auth_manager_tests.rs  data_command_tests.rs  data_manager.rs  data_tests_utils.rs  data_type.rs  data_value.rs  key.rs  key_tests.rs  mod.rs  store.rs
src/data/command_tests/: auth_tests.rs  create_store_tests.rs  create_user_tests.rs  del_tests.rs  delete_user_tests.rs  get_tests.rs  get_user_tests.rs  grant_tests.rs  mod.rs  revoke_tests.rs  set_tests.rs
src/data/test/: auth_manager_tests.rs  data_tests_utils.rs  key_tests.rs  mod.rs
src/data/test/command_tests/: auth_tests.rs  create_store_tests.rs  create_user_tests.rs  del_tests.rs  delete_user_tests.rs  get_tests.rs  get_user_tests.rs  grant_tests.rs  mod.rs  revoke_tests.rs  set_tests.rs
src/handler/: client_handler.rs  mod.rs
src/persistence/: mod.rs  persistence_type.rs
src/persistence/logger/: append_only_logger.rs  log_reader.rs  mod.rs  record.rs
src/session/: mod.rs  session.rs
tests/: integration_tests.rs
