[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
clap = { version = "4.5.3", features = ["derive"] }
crc32fast = "1.4.0"
futures = "0.3.30"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.33"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.10.1"
